// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`combobox > passes through additional html attributes 1`] = `
<input
  aria-autocomplete="list"
  aria-expanded="false"
  aria-haspopup="listbox"
  autocomplete="off"
  data-passed-through="true"
  data-testid="AttributePassthrough"
  id="s0-input"
  name="example1text"
  role="combobox"
  type="text"
/>
`;

exports[`combobox > passes through additional html attributes 2`] = `
<span
  class="combobox class1"
  style="color:red"
>
  <span
    class="combobox__control"
  >
    <input
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="listbox"
      autocomplete="off"
      data-passed-through="true"
      data-testid="AttributePassthrough"
      id="s0-input"
      name="example1text"
      role="combobox"
      type="text"
    />
  </span>
  <div
    class="combobox__listbox"
    role="listbox"
  >
    <div
      class="combobox__option"
      role="option"
      tabindex="-1"
    >
      <span>
        August Campaign
      </span>
    </div>
    <div
      class="combobox__option"
      role="option"
      tabindex="-1"
    >
      <span>
        4th of July Sale (paused)
      </span>
    </div>
    <div
      class="combobox__option"
      role="option"
      tabindex="-1"
    >
      <span>
        Basic Offer
      </span>
    </div>
    <div
      class="combobox__option"
      role="option"
      tabindex="-1"
    >
      <span>
        Basic Offer 2
      </span>
    </div>
    <div
      class="combobox__option"
      role="option"
      tabindex="-1"
    >
      <span>
        Basic Offer 3
      </span>
    </div>
    <div
      class="combobox__option"
      role="option"
      tabindex="-1"
    >
      <span>
        Basic Offer 4
      </span>
    </div>
  </div>
</span>
`;

exports[`combobox > renders basic version 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"combobox"[39m
  [36m>[39m
    [36m<span[39m
      [33mclass[39m=[32m"combobox__control"[39m
    [36m>[39m
      [36m<input[39m
        [33maria-autocomplete[39m=[32m"list"[39m
        [33maria-expanded[39m=[32m"false"[39m
        [33maria-haspopup[39m=[32m"listbox"[39m
        [33mautocomplete[39m=[32m"off"[39m
        [33mid[39m=[32m"s0-input"[39m
        [33mname[39m=[32m"example1text"[39m
        [33mrole[39m=[32m"combobox"[39m
        [33mtype[39m=[32m"text"[39m
      [36m/>[39m
    [36m</span>[39m
    [36m<div[39m
      [33mclass[39m=[32m"combobox__listbox"[39m
      [33mrole[39m=[32m"listbox"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m"combobox__option"[39m
        [33mrole[39m=[32m"option"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<span>[39m
          [0mAugust Campaign[0m
        [36m</span>[39m
      [36m</div>[39m
      [36m<div[39m
        [33mclass[39m=[32m"combobox__option"[39m
        [33mrole[39m=[32m"option"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<span>[39m
          [0m4th of July Sale (paused)[0m
        [36m</span>[39m
      [36m</div>[39m
      [36m<div[39m
        [33mclass[39m=[32m"combobox__option"[39m
        [33mrole[39m=[32m"option"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<span>[39m
          [0mBasic Offer[0m
        [36m</span>[39m
      [36m</div>[39m
      [36m<div[39m
        [33mclass[39m=[32m"combobox__option"[39m
        [33mrole[39m=[32m"option"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<span>[39m
          [0mBasic Offer 2[0m
        [36m</span>[39m
      [36m</div>[39m
      [36m<div[39m
        [33mclass[39m=[32m"combobox__option"[39m
        [33mrole[39m=[32m"option"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<span>[39m
          [0mBasic Offer 3[0m
        [36m</span>[39m
      [36m</div>[39m
      [36m<div[39m
        [33mclass[39m=[32m"combobox__option"[39m
        [33mrole[39m=[32m"option"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<span>[39m
          [0mBasic Offer 4[0m
        [36m</span>[39m
      [36m</div>[39m
    [36m</div>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`combobox > renders empty 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"combobox"[39m
  [36m>[39m
    [36m<span[39m
      [33mclass[39m=[32m"combobox__control"[39m
    [36m>[39m
      [36m<input[39m
        [33maria-autocomplete[39m=[32m"list"[39m
        [33maria-expanded[39m=[32m"false"[39m
        [33maria-haspopup[39m=[32m"listbox"[39m
        [33mautocomplete[39m=[32m"off"[39m
        [33mid[39m=[32m"s0-input"[39m
        [33mname[39m=[32m"example1text"[39m
        [33mrole[39m=[32m"combobox"[39m
        [33mtype[39m=[32m"text"[39m
      [36m/>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`combobox > renders with actionable button 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"combobox"[39m
  [36m>[39m
    [36m<span[39m
      [33mclass[39m=[32m"combobox__control combobox__control--actionable"[39m
    [36m>[39m
      [36m<input[39m
        [33maria-autocomplete[39m=[32m"list"[39m
        [33maria-expanded[39m=[32m"false"[39m
        [33maria-haspopup[39m=[32m"listbox"[39m
        [33mautocomplete[39m=[32m"off"[39m
        [33mid[39m=[32m"s0-input"[39m
        [33mname[39m=[32m"example1text"[39m
        [33mrole[39m=[32m"combobox"[39m
        [33mtype[39m=[32m"text"[39m
      [36m/>[39m
      [36m<button[39m
        [33mclass[39m=[32m"icon-btn icon-btn--transparent"[39m
      [36m>[39m
        [0mbutton[0m
      [36m</button>[39m
    [36m</span>[39m
    [36m<div[39m
      [33mclass[39m=[32m"combobox__listbox"[39m
      [33mrole[39m=[32m"listbox"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m"combobox__option"[39m
        [33mrole[39m=[32m"option"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<span>[39m
          [0mAugust Campaign[0m
        [36m</span>[39m
      [36m</div>[39m
      [36m<div[39m
        [33mclass[39m=[32m"combobox__option"[39m
        [33mrole[39m=[32m"option"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<span>[39m
          [0m4th of July Sale (paused)[0m
        [36m</span>[39m
      [36m</div>[39m
      [36m<div[39m
        [33mclass[39m=[32m"combobox__option"[39m
        [33mrole[39m=[32m"option"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<span>[39m
          [0mBasic Offer[0m
        [36m</span>[39m
      [36m</div>[39m
      [36m<div[39m
        [33mclass[39m=[32m"combobox__option"[39m
        [33mrole[39m=[32m"option"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<span>[39m
          [0mBasic Offer 2[0m
        [36m</span>[39m
      [36m</div>[39m
      [36m<div[39m
        [33mclass[39m=[32m"combobox__option"[39m
        [33mrole[39m=[32m"option"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<span>[39m
          [0mBasic Offer 3[0m
        [36m</span>[39m
      [36m</div>[39m
      [36m<div[39m
        [33mclass[39m=[32m"combobox__option"[39m
        [33mrole[39m=[32m"option"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<span>[39m
          [0mBasic Offer 4[0m
        [36m</span>[39m
      [36m</div>[39m
    [36m</div>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`combobox > renders with borderless enabled 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"combobox"[39m
  [36m>[39m
    [36m<span[39m
      [33mclass[39m=[32m"combobox__control combobox__control--borderless"[39m
    [36m>[39m
      [36m<input[39m
        [33maria-autocomplete[39m=[32m"list"[39m
        [33maria-expanded[39m=[32m"false"[39m
        [33maria-haspopup[39m=[32m"listbox"[39m
        [33mautocomplete[39m=[32m"off"[39m
        [33mid[39m=[32m"s0-input"[39m
        [33mname[39m=[32m"example1text"[39m
        [33mrole[39m=[32m"combobox"[39m
        [33mtype[39m=[32m"text"[39m
      [36m/>[39m
    [36m</span>[39m
    [36m<div[39m
      [33mclass[39m=[32m"combobox__listbox"[39m
      [33mrole[39m=[32m"listbox"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m"combobox__option"[39m
        [33mrole[39m=[32m"option"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<span>[39m
          [0mAugust Campaign[0m
        [36m</span>[39m
      [36m</div>[39m
      [36m<div[39m
        [33mclass[39m=[32m"combobox__option"[39m
        [33mrole[39m=[32m"option"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<span>[39m
          [0m4th of July Sale (paused)[0m
        [36m</span>[39m
      [36m</div>[39m
      [36m<div[39m
        [33mclass[39m=[32m"combobox__option"[39m
        [33mrole[39m=[32m"option"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<span>[39m
          [0mBasic Offer[0m
        [36m</span>[39m
      [36m</div>[39m
      [36m<div[39m
        [33mclass[39m=[32m"combobox__option"[39m
        [33mrole[39m=[32m"option"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<span>[39m
          [0mBasic Offer 2[0m
        [36m</span>[39m
      [36m</div>[39m
      [36m<div[39m
        [33mclass[39m=[32m"combobox__option"[39m
        [33mrole[39m=[32m"option"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<span>[39m
          [0mBasic Offer 3[0m
        [36m</span>[39m
      [36m</div>[39m
      [36m<div[39m
        [33mclass[39m=[32m"combobox__option"[39m
        [33mrole[39m=[32m"option"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<span>[39m
          [0mBasic Offer 4[0m
        [36m</span>[39m
      [36m</div>[39m
    [36m</div>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`combobox > renders with default actionable button 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"combobox"[39m
  [36m>[39m
    [36m<span[39m
      [33mclass[39m=[32m"combobox__control combobox__control--actionable"[39m
    [36m>[39m
      [36m<input[39m
        [33maria-autocomplete[39m=[32m"list"[39m
        [33maria-expanded[39m=[32m"false"[39m
        [33maria-haspopup[39m=[32m"listbox"[39m
        [33mautocomplete[39m=[32m"off"[39m
        [33mid[39m=[32m"s0-input"[39m
        [33mname[39m=[32m"example1text"[39m
        [33mrole[39m=[32m"combobox"[39m
        [33mtype[39m=[32m"text"[39m
      [36m/>[39m
      [36m<button[39m
        [33maria-label[39m=[32m"Actionable Button"[39m
        [33mclass[39m=[32m"icon-btn icon-btn--transparent"[39m
      [36m/>[39m
    [36m</span>[39m
    [36m<div[39m
      [33mclass[39m=[32m"combobox__listbox"[39m
      [33mrole[39m=[32m"listbox"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m"combobox__option"[39m
        [33mrole[39m=[32m"option"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<span>[39m
          [0mAugust Campaign[0m
        [36m</span>[39m
      [36m</div>[39m
      [36m<div[39m
        [33mclass[39m=[32m"combobox__option"[39m
        [33mrole[39m=[32m"option"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<span>[39m
          [0m4th of July Sale (paused)[0m
        [36m</span>[39m
      [36m</div>[39m
      [36m<div[39m
        [33mclass[39m=[32m"combobox__option"[39m
        [33mrole[39m=[32m"option"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<span>[39m
          [0mBasic Offer[0m
        [36m</span>[39m
      [36m</div>[39m
      [36m<div[39m
        [33mclass[39m=[32m"combobox__option"[39m
        [33mrole[39m=[32m"option"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<span>[39m
          [0mBasic Offer 2[0m
        [36m</span>[39m
      [36m</div>[39m
      [36m<div[39m
        [33mclass[39m=[32m"combobox__option"[39m
        [33mrole[39m=[32m"option"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<span>[39m
          [0mBasic Offer 3[0m
        [36m</span>[39m
      [36m</div>[39m
      [36m<div[39m
        [33mclass[39m=[32m"combobox__option"[39m
        [33mrole[39m=[32m"option"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<span>[39m
          [0mBasic Offer 4[0m
        [36m</span>[39m
      [36m</div>[39m
    [36m</div>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`combobox > renders with fixed strategy 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"combobox"[39m
  [36m>[39m
    [36m<span[39m
      [33mclass[39m=[32m"combobox__control"[39m
    [36m>[39m
      [36m<input[39m
        [33maria-autocomplete[39m=[32m"list"[39m
        [33maria-expanded[39m=[32m"false"[39m
        [33maria-haspopup[39m=[32m"listbox"[39m
        [33mautocomplete[39m=[32m"off"[39m
        [33mid[39m=[32m"s0-input"[39m
        [33mname[39m=[32m"example1text"[39m
        [33mrole[39m=[32m"combobox"[39m
        [33mtype[39m=[32m"text"[39m
      [36m/>[39m
    [36m</span>[39m
    [36m<div[39m
      [33mclass[39m=[32m"combobox__listbox combobox__listbox--fixed"[39m
      [33mrole[39m=[32m"listbox"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m"combobox__option"[39m
        [33mrole[39m=[32m"option"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<span>[39m
          [0mAugust Campaign[0m
        [36m</span>[39m
      [36m</div>[39m
      [36m<div[39m
        [33mclass[39m=[32m"combobox__option"[39m
        [33mrole[39m=[32m"option"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<span>[39m
          [0m4th of July Sale (paused)[0m
        [36m</span>[39m
      [36m</div>[39m
      [36m<div[39m
        [33mclass[39m=[32m"combobox__option"[39m
        [33mrole[39m=[32m"option"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<span>[39m
          [0mBasic Offer[0m
        [36m</span>[39m
      [36m</div>[39m
      [36m<div[39m
        [33mclass[39m=[32m"combobox__option"[39m
        [33mrole[39m=[32m"option"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<span>[39m
          [0mBasic Offer 2[0m
        [36m</span>[39m
      [36m</div>[39m
      [36m<div[39m
        [33mclass[39m=[32m"combobox__option"[39m
        [33mrole[39m=[32m"option"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<span>[39m
          [0mBasic Offer 3[0m
        [36m</span>[39m
      [36m</div>[39m
      [36m<div[39m
        [33mclass[39m=[32m"combobox__option"[39m
        [33mrole[39m=[32m"option"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<span>[39m
          [0mBasic Offer 4[0m
        [36m</span>[39m
      [36m</div>[39m
    [36m</div>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`combobox > renders with floating label 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"combobox floating-label"[39m
  [36m>[39m
    [36m<label[39m
      [33mclass[39m=[32m"floating-label__label"[39m
      [33mfor[39m=[32m"s0-input"[39m
    [36m>[39m
      [0mDefault Label[0m
    [36m</label>[39m
    [36m<span[39m
      [33mclass[39m=[32m"combobox__control"[39m
    [36m>[39m
      [36m<input[39m
        [33maria-autocomplete[39m=[32m"list"[39m
        [33maria-expanded[39m=[32m"false"[39m
        [33maria-haspopup[39m=[32m"listbox"[39m
        [33mautocomplete[39m=[32m"off"[39m
        [33mid[39m=[32m"s0-input"[39m
        [33mname[39m=[32m"example1text"[39m
        [33mrole[39m=[32m"combobox"[39m
        [33mtype[39m=[32m"text"[39m
        [33mvalue[39m=[32m""[39m
      [36m/>[39m
    [36m</span>[39m
    [36m<div[39m
      [33mclass[39m=[32m"combobox__listbox"[39m
      [33mrole[39m=[32m"listbox"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m"combobox__option"[39m
        [33mrole[39m=[32m"option"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<span>[39m
          [0mAugust Campaign[0m
        [36m</span>[39m
      [36m</div>[39m
      [36m<div[39m
        [33mclass[39m=[32m"combobox__option"[39m
        [33mrole[39m=[32m"option"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<span>[39m
          [0m4th of July Sale (paused)[0m
        [36m</span>[39m
      [36m</div>[39m
      [36m<div[39m
        [33mclass[39m=[32m"combobox__option"[39m
        [33mrole[39m=[32m"option"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<span>[39m
          [0mBasic Offer[0m
        [36m</span>[39m
      [36m</div>[39m
      [36m<div[39m
        [33mclass[39m=[32m"combobox__option"[39m
        [33mrole[39m=[32m"option"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<span>[39m
          [0mBasic Offer 2[0m
        [36m</span>[39m
      [36m</div>[39m
      [36m<div[39m
        [33mclass[39m=[32m"combobox__option"[39m
        [33mrole[39m=[32m"option"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<span>[39m
          [0mBasic Offer 3[0m
        [36m</span>[39m
      [36m</div>[39m
      [36m<div[39m
        [33mclass[39m=[32m"combobox__option"[39m
        [33mrole[39m=[32m"option"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<span>[39m
          [0mBasic Offer 4[0m
        [36m</span>[39m
      [36m</div>[39m
    [36m</div>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`combobox > renders with second item selected 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"combobox"[39m
  [36m>[39m
    [36m<span[39m
      [33mclass[39m=[32m"combobox__control"[39m
    [36m>[39m
      [36m<input[39m
        [33maria-autocomplete[39m=[32m"list"[39m
        [33maria-expanded[39m=[32m"false"[39m
        [33maria-haspopup[39m=[32m"listbox"[39m
        [33mautocomplete[39m=[32m"off"[39m
        [33mid[39m=[32m"s0-input"[39m
        [33mname[39m=[32m"example1text"[39m
        [33mrole[39m=[32m"combobox"[39m
        [33mtype[39m=[32m"text"[39m
        [33mvalue[39m=[32m"Basic Offer"[39m
      [36m/>[39m
    [36m</span>[39m
    [36m<div[39m
      [33mclass[39m=[32m"combobox__listbox"[39m
      [33mrole[39m=[32m"listbox"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m"combobox__option"[39m
        [33mrole[39m=[32m"option"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<span>[39m
          [0mBasic Offer[0m
        [36m</span>[39m
      [36m</div>[39m
      [36m<div[39m
        [33mclass[39m=[32m"combobox__option"[39m
        [33mrole[39m=[32m"option"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<span>[39m
          [0mBasic Offer 2[0m
        [36m</span>[39m
      [36m</div>[39m
      [36m<div[39m
        [33mclass[39m=[32m"combobox__option"[39m
        [33mrole[39m=[32m"option"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<span>[39m
          [0mBasic Offer 3[0m
        [36m</span>[39m
      [36m</div>[39m
      [36m<div[39m
        [33mclass[39m=[32m"combobox__option"[39m
        [33mrole[39m=[32m"option"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<span>[39m
          [0mBasic Offer 4[0m
        [36m</span>[39m
      [36m</div>[39m
    [36m</div>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`combobox-option > passes through additional html attributes from child option 1`] = `
<div
  class="combobox__option class1"
  data-passed-through="true"
  data-testid="AttributePassthrough"
  role="option"
  style="color:red"
  tabindex="-1"
  type="number"
>
  <span>
    test
  </span>
</div>
`;

exports[`combobox-option > passes through additional html attributes from child option 2`] = `
<div
  class="combobox__option class1"
  data-passed-through="true"
  data-testid="AttributePassthrough"
  role="option"
  style="color:red"
  tabindex="-1"
  type="number"
>
  <span>
    test
  </span>
</div>
`;
